update Create Order Test